--- a/blokmeld/index.html
+++ b/blokmeld/index.html
@@ -58,36 +58,36 @@
             <div class="col-12 col-md-3">
                 <div class="btn-group btn-group-lg d-none d-md-block" role="group">
                     <div class="btn-group-vertical" role="group">
-                        <button type="button" class="btn btn-secondary">Level 1</button>
-                        <button type="button" class="btn btn-secondary">Level 2</button>
-                        <button type="button" class="btn btn-secondary">Level 3</button>
-                        <button type="button" class="btn btn-secondary">Level 4</button>
-                        <button type="button" class="btn btn-secondary">Level 5</button>
-                        <button type="button" class="btn btn-secondary">Level 6</button>
-                        <button type="button" class="btn btn-secondary">Level 7</button>
-                        <button type="button" class="btn btn-secondary">Level 8</button>
-                        <button type="button" class="btn btn-secondary">Level 9</button>
-                        <button type="button" class="btn btn-secondary">Level 10</button>
+                        <button type="button" class="btn btn-secondary" id="level1">Level 1</button>
+                        <button type="button" class="btn btn-secondary" id="level2">Level 2</button>
+                        <button type="button" class="btn btn-secondary" id="level3">Level 3</button>
+                        <button type="button" class="btn btn-secondary" id="level4">Level 4</button>
+                        <button type="button" class="btn btn-secondary" id="level5">Level 5</button>
+                        <button type="button" class="btn btn-secondary" id="level6">Level 6</button>
+                        <button type="button" class="btn btn-secondary" id="level7">Level 7</button>
+                        <button type="button" class="btn btn-secondary" id="level8">Level 8</button>
+                        <button type="button" class="btn btn-secondary" id="level9">Level 9</button>
+                        <button type="button" class="btn btn-secondary" id="level10">Level 10</button>
                     </div>
                 </div>
                 <div class="btn-group btn-group-lg d-md-none" role="group">
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-secondary">Level 1</button>
-                        <button type="button" class="btn btn-secondary">Level 2</button>
-                        <button type="button" class="btn btn-secondary">Level 3</button>
-                        <button type="button" class="btn btn-secondary">Level 4</button>
-                        <button type="button" class="btn btn-secondary">Level 5</button>
-                        <button type="button" class="btn btn-secondary">Level 6</button>
-                        <button type="button" class="btn btn-secondary">Level 7</button>
-                        <button type="button" class="btn btn-secondary">Level 8</button>
-                        <button type="button" class="btn btn-secondary">Level 9</button>
-                        <button type="button" class="btn btn-secondary">Level 10</button>
+                        <button type="button" class="btn btn-secondary" id="level1">Level 1</button>
+                        <button type="button" class="btn btn-secondary" id="level2">Level 2</button>
+                        <button type="button" class="btn btn-secondary" id="level3">Level 3</button>
+                        <button type="button" class="btn btn-secondary" id="level4">Level 4</button>
+                        <button type="button" class="btn btn-secondary" id="level5">Level 5</button>
+                        <button type="button" class="btn btn-secondary" id="level6">Level 6</button>
+                        <button type="button" class="btn btn-secondary" id="level7">Level 7</button>
+                        <button type="button" class="btn btn-secondary" id="level8">Level 8</button>
+                        <button type="button" class="btn btn-secondary" id="level9">Level 9</button>
+                        <button type="button" class="btn btn-secondary" id="level10">Level 10</button>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="row">
-                    <div class="col">
+                    <div class="col" id="gameBoard">
                         <img src="/img/blokmeldlogo.png" class="img-fluid" style="width: 100%;" />
                     </div>
                 </div>
@@ -158,6 +158,7 @@
     <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/js/scripts.js"></script>
+    <script src="/blokmeld/js/blokmeld.js"></script>
     <!-- endbuild -->
 
 </body>
