--- a/blokmeld/index.html
+++ b/blokmeld/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="/node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <!-- endbuild -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lucida|Open+Sans" />
     <title>BlokMeld</title>
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/img/pclogo.png" height="30" width="30" /></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/pclogo.png" height="30" width="30" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#PuzzleConnectionNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -88,7 +88,7 @@
             <div class="col-12 col-md-6">
                 <div class="row">
                     <div class="col" id="gameBoard">
-                        <img src="/img/blokmeldlogo.png" class="img-fluid" style="width: 100%;" />
+                        <img src="../img/blokmeldlogo.png" class="img-fluid" style="width: 100%;" />
                     </div>
                 </div>
             </div>
@@ -154,11 +154,11 @@
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <!-- build:js js/main.js -->
-    <script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/js/scripts.js"></script>
-    <script src="/blokmeld/js/blokmeld.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../js/scripts.js"></script>
+    <script src="../blokmeld/js/blokmeld.js"></script>
     <!-- endbuild -->
 
 </body>
